--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="Descripcion del sitio web">
     <meta name="Keyword" content="Creación de formulario">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/">
+    <link rel="stylesheet" href="css/style.css">
     <title>Formulario</title>
     <!--Titulo de la pastaña de la pagina-->
 </head>
